[project]
name = "prodigal"
version = "0.1.0"
description = "Interactive Call Analysis Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "pathlib-mate>=1.0.0",
    "numpy>=2.3.2",
    "matplotlib>=3.10.5",
    "langchain[all]>=0.3.27",
    "langchain-groq>=0.3.7",
    "pydantic>=2.11.7",
    "dotenv>=0.9.9",
    "groq>=0.31.0",
    "python-dotenv>=1.1.1",
    "memory-profiler>=0.61.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.1",
]
